finised grid layout for about section

--- a/Natours/starter/scss/abstract/_mixin.scss
+++ b/Natours/starter/scss/abstract/_mixin.scss
@@ -10,3 +10,11 @@
   position: relative;
   font-size: 1.6rem;
 }
+
+@mixin clear-fix {
+  &::after{
+    content: "";
+    clear:both;
+    display: table;
+  }
+}
