--- a/Natours/starter/scss/abstract/_variable.scss
+++ b/Natours/starter/scss/abstract/_variable.scss
@@ -1,2 +1,8 @@
 $lightgreen: rgba(213, 111, 162, 0.8);
 $darkgreen: #28b485;
+$color-grey-light-1: #f7f7f7;
+
+//GRID
+$grid-width:114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
