--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -53,6 +53,68 @@ body {
     opacity: 1;
     transform: translateX(10rem); } }
 
+.logo {
+  height: 4.5rem; }
+
+.heading-primary {
+  color: white;
+  text-transform: uppercase;
+  font-size: 0.08rem;
+  margin-bottom: 6rem; }
+
+.text-box {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center; }
+
+.heading-primary-main {
+  display: block;
+  font-size: 5rem;
+  font-weight: 400;
+  letter-spacing: 3.5rem;
+  animation-name: moveFromRight;
+  animation-duration: 3s; }
+
+.heading-primary-sub {
+  display: block;
+  font-size: 2rem;
+  font-weight: 700;
+  letter-spacing: 2rem;
+  animation: moveFromLeft 1s ease-out;
+  margin-bottom: 1.6rem; }
+
+.heading-secondary {
+  font-size: 3rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  background-image: linear-gradient(to right, rgba(213, 111, 162, 0.8), #28b485);
+  display: inline-block;
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  transition: transform 2s; }
+  .heading-secondary:hover {
+    transform: skewY(2deg) skewX(15deg);
+    text-shadow: 1rem 1rem 2rem rgba(0, 0, 0, 0.2); }
+
+.sub {
+  font-size: 2.6rem;
+  font-weight: 700;
+  text-transform: uppercase; }
+
+.description {
+  font-size: 1.5rem; }
+  .description:not(:last-child) {
+    margin-bottom: 3rem; }
+
+.u-center-text {
+  text-align: center; }
+
+.u-margin-bottom-8 {
+  margin-bottom: 8rem; }
+
 .btn:link {
   text-transform: uppercase;
   text-decoration: none;
@@ -121,34 +183,23 @@ body {
     .header .logo-box:hover .logo {
       animation: moveFromLeft 3s ease-in-out; }
 
-.logo {
-  height: 4.5rem; }
+.row {
+  max-width: 114rem;
+  margin: 0 auto; }
+  .row:not(:last-child) {
+    margin-bottom: 8rem; }
+  .row::after {
+    content: "";
+    clear: both;
+    display: table; }
+  .row [class^="col-"] {
+    float: left; }
+    .row [class^="col-"]:not(:last-child) {
+      margin-right: 6rem; }
+  .row .col-1-of-2 {
+    width: calc((100% - 6rem) / 2); }
 
-.heading-primary {
-  color: white;
-  text-transform: uppercase;
-  font-size: 0.08rem;
-  margin-bottom: 6rem; }
-
-.text-box {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center; }
-
-.heading-primary-main {
-  display: block;
-  font-size: 5rem;
-  font-weight: 400;
-  letter-spacing: 3.5rem;
-  animation-name: moveFromRight;
-  animation-duration: 3s; }
-
-.heading-primary-sub {
-  display: block;
-  font-size: 2rem;
-  font-weight: 700;
-  letter-spacing: 2rem;
-  animation: moveFromLeft 1s ease-out;
-  margin-bottom: 1.6rem; }
+.section-about {
+  background-color: #f7f7f7;
+  padding: 25rem 0;
+  margin-top: -20vh; }
