--- a/Natours/starter/scss/main.scss
+++ b/Natours/starter/scss/main.scss
@@ -15,45 +15,13 @@ Dark green: #28b485
 @import "base/base";
 @import "base/animation";
 @import "base/typo";
+@import "base/utilities";
 
 @import "components/button";
 
 @import "layout/header";
+@import "layout/grid";
 
-.logo {
-  height: 4.5rem;
-}
+@import "pages/home";
 
-.heading-primary {
-  color: white;
-  text-transform: uppercase;
-  font-size: 0.08rem;
-  margin-bottom: 6rem;
-}
-
-.text-box {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-.heading-primary-main {
-  display: block;
-  font-size: 5rem;
-  font-weight: 400;
-  letter-spacing: 3.5rem;
-  animation-name: moveFromRight;
-  animation-duration: 3s;
-}
-
-.heading-primary-sub {
-  display: block;
-  font-size: 2rem;
-  font-weight: 700;
-  letter-spacing: 2rem;
-  animation: moveFromLeft 1s ease-out;
-  margin-bottom: 1.6rem;
-}
 
