--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -112,7 +112,13 @@ body {
 .u-center-text {
   text-align: center; }
 
-.u-margin-bottom-8 {
+.u-margin-bottom-small {
+  margin-bottom: 2rem; }
+
+.u-margin-bottom-medium {
+  margin-bottom: 4rem; }
+
+.u-margin-bottom-big {
   margin-bottom: 8rem; }
 
 .btn:link {
@@ -169,6 +175,68 @@ body {
   transform: scale(1.5);
   opacity: 0.5; }
 
+.btn-text {
+  transition: all 0.2s;
+  padding: 5px; }
+  .btn-text:link, .btn-text:visited {
+    color: #28b485;
+    display: inline-block;
+    text-decoration: none;
+    border-bottom: 1px solid #28b485;
+    font-size: 1.6rem; }
+  .btn-text:hover {
+    background-color: #28b485;
+    color: white;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+    transform: translateY(-2px); }
+  .btn-text:active {
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+    transform: translateY(0); }
+
+.composition {
+  position: relative; }
+  .composition__photo {
+    width: 55%;
+    box-shadow: 0 1.5rem 40rem rgba(0, 0, 0, 0.2);
+    position: absolute;
+    z-index: 10;
+    transition: all 0.2s;
+    outline: 5px solid green;
+    outline-offset: 2rem; }
+    .composition__photo--p1 {
+      top: 1rem;
+      left: 0; }
+    .composition__photo--p2 {
+      top: 5rem;
+      right: 0; }
+    .composition__photo--p3 {
+      top: 15rem;
+      left: 20%; }
+    .composition__photo:hover {
+      transform: scale(1.5);
+      z-index: 20;
+      box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.7); }
+  .composition:hover .composition__photo:not(:hover) {
+    transform: scale(0.95); }
+
+.feature-box {
+  background-color: rgba(255, 255, 255, 0.8);
+  font-size: 1.5rem;
+  padding: 2.5rem;
+  text-align: center;
+  border-radius: 3px;
+  box-shadow: 0rem 1.5rem 4rem rgba(255, 255, 255, 0.8);
+  transition: transform .5s; }
+  .feature-box__icon {
+    font-size: 6rem;
+    background-image: linear-gradient(to right, rgba(213, 111, 162, 0.8), #28b485);
+    display: inline-block;
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent; }
+  .feature-box:hover {
+    transform: translateY(-1.5rem) scale(1.08); }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(213, 111, 162, 0.8), #28b485), url(../img/hero.jpg);
@@ -198,8 +266,15 @@ body {
       margin-right: 6rem; }
   .row .col-1-of-2 {
     width: calc((100% - 6rem) / 2); }
+  .row .col-1-of-4 {
+    width: calc((100% - 6rem) / 4); }
 
 .section-about {
   background-color: #f7f7f7;
   padding: 25rem 0;
   margin-top: -20vh; }
+
+.section-feature {
+  padding: 20rem 0;
+  background-image: linear-gradient(to right bottom, rgba(213, 111, 162, 0.8), #28b485), url(../img/nat-4.jpg);
+  background-size: cover; }
