--- a/Natours/starter/scss/main.scss
+++ b/Natours/starter/scss/main.scss
@@ -18,6 +18,8 @@ Dark green: #28b485
 @import "base/utilities";
 
 @import "components/button";
+@import "components/composition";
+@import "components/feature-box";
 
 @import "layout/header";
 @import "layout/grid";
