--- a/Natours/starter/scss/pages/_home.scss
+++ b/Natours/starter/scss/pages/_home.scss
@@ -3,3 +3,10 @@
   padding: 25rem 0;
   margin-top: -20vh;
 }
+
+.section-feature {
+  padding:20rem 0;
+  background-image: linear-gradient(to right bottom, $lightgreen, $darkgreen),
+  url(../img/nat-4.jpg);
+  background-size: cover;
+}
